--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <ul id="carrito" class="list-group"></ul>
         <hr />
         <p class="text-right">Total: <span id="total"></span></p>
-        <button id="boton-vaciar" class="btn btn-danger">Vaciar</button>
+        <button id="boton-vaciar" class="btn btn-danger">Vaciar Carrito</button>
       </aside>
     </div>
   </div>
